--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'Ubuntu';
-    src: url('fonts/Ubuntu-L.woff2') format('woff2'),
-         url('fonts/Ubuntu-L.woff') format('woff'),
-         url('fonts/Ubuntu-L.ttf') format('truetype');
+    src: url('fonts/Ubuntu-Light.woff2') format('woff2'),
+         url('fonts/Ubuntu-Light.woff') format('woff'),
+         url('fonts/Ubuntu-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
