--- a/styles.css
+++ b/styles.css
@@ -72,3 +72,16 @@ p {
     font-size: 1em;
     color: #bdc3c7;
 }
+
+.video-container {
+    position: relative;
+    width: 100%;
+    max-width: 560px;
+    margin: 20px auto;
+}
+
+.video-container iframe {
+    width: 100%;
+    height: 315px;
+    border: none;
+}
