--- a/styles.css
+++ b/styles.css
@@ -63,12 +63,20 @@ section#about-me {
     background-color: #2c3e50;
     padding: 30px; /* Increased padding */
     border-radius: 8px;
+    margin-bottom: 20px; /* Add some space at the bottom */
 }
 
 section#pc-specs {
     display: flex;
     align-items: flex-start;
-    margin-top: 20px;
+    margin-top: 40px;
+    background-color: transparent;
+}
+
+section#contact-me {
+    background-color: #2c3e50;
+    padding: 20px;
+    border-radius: 8px;
 }
 
 section {
@@ -83,6 +91,18 @@ h2 {
 p {
     font-size: 1em;
     color: #bdc3c7;
+}
+
+.contact-message {
+    font-size: 1.2em;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.contact-warning {
+    font-size: 1.2em;
+    color: red;
+    font-weight: bold;
 }
 
 .video-container {
