--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,16 @@ header {
     background-color: #2c3e50;
 }
 
+footer {
+    background-color: #2c3e50;
+    color: #bdc3c7;
+    text-align: center;
+    padding: 20px;
+    position: absolute;
+    width: 97.9%;
+    bottom: 0;
+}
+
 h1 {
     margin: 0;
     font-size: 1.5em;
@@ -79,6 +89,19 @@ section#contact-me {
     border-radius: 8px;
 }
 
+section#modiso {
+    background-color: #2c3e50;
+    padding: 30px; /* Increased padding */
+    border-radius: 8px;
+    margin-bottom: 20px; /* Add some space at the bottom */
+}
+
+section#iso-list {
+    background-color: #3d4f64;
+    padding: 20px;
+    border-radius: 8px;
+}
+
 section {
     margin-bottom: 20px;
 }
@@ -126,3 +149,4 @@ p {
 .pc-specs {
     background-color: transparent;
 }
+
